# Server-Sent-Events

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  dynamodb_local_init.sh  update_report_status.sh
server_sent_events_frontend/: index.html  package-lock.json  package.json
server_sent_events_frontend/src/: App.css  App.tsx  client.ts  report.ts
server_sent_events_frontend/src/components/: Login.tsx  ReportStatusTable.tsx  StatusCircle.tsx
src/: lib.rs  main.rs  v1.rs  v2.rs  v3.rs  v4.rs
src/v4/: app_events.rs  database.rs  dynamodb.rs  kafka_consumer.rs  kafka_producer.rs  report_status.rs  request_handlers.rs  tasks.rs
