[package]
name = "server_sent_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
futures = "0.3"
headers = "0.4"
rdkafka = { version = "0.36.0", features = ["tracing"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
