[package]
name = "server_sent_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
aws-config = "1.0.3"
aws-sdk-dynamodb = "1.4.0"
axum = { version = "0.7.1", features = ["macros"] }
futures = "0.3"
headers = "0.4"
lru = "0.12.1"
rdkafka = { version = "0.36.0", features = ["tracing"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
